deployment/zero-downtime/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: zero-downtime
spec:
  backend:
    serviceName: zero-downtime
    servicePort: 8080
---
